[tool.poetry]
name = "grpc-auction"
version = "0.1.0"
description = ""
authors = ["German Gritsenko gerfest.gricenko@gmail.com"]
readme = "README.md"
packages = [{include = "grpc_auction"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
